// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addImportantToEachRule() should add !important to each rule 1`] = `
{
  "&:hover": {
    "&:focus": {
      "color": "orange !important",
    },
    "color": "blue !important",
  },
  "color": "red !important",
  "content": """ !important",
  "display": "block !important",
  "margin": "0 !important",
}
`;

exports[`getBaseSlottedStyles() should return correct styles 1`] = `
{
  "& a": {
    "&::-moz-focus-inner": {
      "border": 0,
    },
    "&:focus": {
      "outlineColor": "currentColor",
    },
    "&:focus:not(:focus-visible)": {
      "outlineColor": "transparent",
    },
    "@media(hover:hover)": {
      "&:hover": {
        "color": "#d5001c",
      },
      "transition": "color var(--p-transition-duration, .24s) ease",
    },
    "color": "inherit",
    "outline": "1px solid transparent",
    "outlineOffset": "1px",
    "textDecoration": "underline",
  },
  "& b, & strong": {
    "fontWeight": 700,
  },
  "& em, & i": {
    "fontStyle": "normal",
  },
}
`;

exports[`getBaseSlottedStyles() should return correct styles with dark theme 1`] = `
{
  "& a": {
    "&::-moz-focus-inner": {
      "border": 0,
    },
    "&:focus": {
      "outlineColor": "currentColor",
    },
    "&:focus:not(:focus-visible)": {
      "outlineColor": "transparent",
    },
    "@media(hover:hover)": {
      "&:hover": {
        "color": "#d5001c",
      },
      "transition": "color var(--p-transition-duration, .24s) ease",
    },
    "color": "inherit",
    "outline": "1px solid transparent",
    "outlineOffset": "1px",
    "textDecoration": "underline",
  },
  "& b, & strong": {
    "fontWeight": 700,
  },
  "& em, & i": {
    "fontStyle": "normal",
  },
  "&[data-theme="dark"] a:hover": {
    "@media(hover:hover)": {
      "color": "#ff0223",
    },
  },
}
`;

exports[`getBaseSlottedStyles() should return correct styles without dark theme 1`] = `
{
  "& a": {
    "&::-moz-focus-inner": {
      "border": 0,
    },
    "&:focus": {
      "outlineColor": "currentColor",
    },
    "&:focus:not(:focus-visible)": {
      "outlineColor": "transparent",
    },
    "@media(hover:hover)": {
      "&:hover": {
        "color": "#d5001c",
      },
      "transition": "color var(--p-transition-duration, .24s) ease",
    },
    "color": "inherit",
    "outline": "1px solid transparent",
    "outlineOffset": "1px",
    "textDecoration": "underline",
  },
  "& b, & strong": {
    "fontWeight": 700,
  },
  "& em, & i": {
    "fontStyle": "normal",
  },
}
`;

exports[`getFocusJssStyles() should return correct JssStyle for params: { color: 'deeppink', offset: 1, pseudo: '::before' } 1`] = `
{
  "&::-moz-focus-inner": {
    "border": 0,
  },
  "&::before": {
    "bottom": 0,
    "content": """",
    "left": 0,
    "outline": "1px solid transparent",
    "outlineOffset": "1px",
    "position": "absolute",
    "right": 0,
    "top": 0,
  },
  "&:focus::before": {
    "outlineColor": "deeppink",
  },
  "&:focus:not(:focus-visible)::before": {
    "outlineColor": "transparent",
  },
  "outline": 0,
}
`;

exports[`getFocusJssStyles() should return correct JssStyle for params: { color: 'deeppink', offset: 2, pseudo: '::after' } 1`] = `
{
  "&::-moz-focus-inner": {
    "border": 0,
  },
  "&::after": {
    "bottom": 0,
    "content": """",
    "left": 0,
    "outline": "1px solid transparent",
    "outlineOffset": "2px",
    "position": "absolute",
    "right": 0,
    "top": 0,
  },
  "&:focus::after": {
    "outlineColor": "deeppink",
  },
  "&:focus:not(:focus-visible)::after": {
    "outlineColor": "transparent",
  },
  "outline": 0,
}
`;

exports[`getFocusJssStyles() should return correct JssStyle for params: { color: 'deeppink', offset: 3 } 1`] = `
{
  "&::-moz-focus-inner": {
    "border": 0,
  },
  "&:focus": {
    "outlineColor": "deeppink",
  },
  "&:focus:not(:focus-visible)": {
    "outlineColor": "transparent",
  },
  "outline": "1px solid transparent",
  "outlineOffset": "3px",
}
`;

exports[`getFocusJssStyles() should return correct JssStyle for params: { color: 'red' } 1`] = `
{
  "&::-moz-focus-inner": {
    "border": 0,
  },
  "&:focus": {
    "outlineColor": "red",
  },
  "&:focus:not(:focus-visible)": {
    "outlineColor": "transparent",
  },
  "outline": "1px solid transparent",
  "outlineOffset": "2px",
}
`;

exports[`getFocusJssStyles() should return correct JssStyle for params: { offset: 1 } 1`] = `
{
  "&::-moz-focus-inner": {
    "border": 0,
  },
  "&:focus": {
    "outlineColor": "currentColor",
  },
  "&:focus:not(:focus-visible)": {
    "outlineColor": "transparent",
  },
  "outline": "1px solid transparent",
  "outlineOffset": "1px",
}
`;

exports[`getFocusJssStyles() should return correct JssStyle for params: {} 1`] = `
{
  "&::-moz-focus-inner": {
    "border": 0,
  },
  "&:focus": {
    "outlineColor": "currentColor",
  },
  "&:focus:not(:focus-visible)": {
    "outlineColor": "transparent",
  },
  "outline": "1px solid transparent",
  "outlineOffset": "2px",
}
`;

exports[`getFormTextHiddenJssStyle() should return correct JssStyle for isHidden: false 1`] = `
{
  "clip": "auto",
  "clipPath": "none",
  "height": "auto",
  "margin": 0,
  "overflow": "visible",
  "padding": "0 0 0.25rem",
  "position": "static",
  "whiteSpace": "normal",
  "width": "fit-content",
}
`;

exports[`getFormTextHiddenJssStyle() should return correct JssStyle for isHidden: true 1`] = `
{
  "border": "0",
  "clip": "rect(1px,1px,1px,1px)",
  "clipPath": "inset(50%)",
  "height": "1px",
  "margin": "-1px",
  "overflow": "hidden",
  "padding": "0 0 0.25rem",
  "position": "absolute",
  "whiteSpace": "nowrap",
  "width": "fit-content",
}
`;

exports[`getHoverJssStyles() should return correct JssStyle for theme: 'dark' 1`] = `
{
  "&:hover": {
    "color": "#ff0223",
  },
  "transition": "color var(--p-transition-duration, .24s) ease",
}
`;

exports[`getHoverJssStyles() should return correct JssStyle for theme: 'light' 1`] = `
{
  "&:hover": {
    "color": "#d5001c",
  },
  "transition": "color var(--p-transition-duration, .24s) ease",
}
`;

exports[`getInsetJssStyle() should return correct JssStyle for parameter: 'auto' 1`] = `
{
  "bottom": "auto",
  "left": "auto",
  "right": "auto",
  "top": "auto",
}
`;

exports[`getInsetJssStyle() should return correct JssStyle for parameter: -1 1`] = `
{
  "bottom": "-1px",
  "left": "-1px",
  "right": "-1px",
  "top": "-1px",
}
`;

exports[`getInsetJssStyle() should return correct JssStyle for parameter: 2 1`] = `
{
  "bottom": "2px",
  "left": "2px",
  "right": "2px",
  "top": "2px",
}
`;

exports[`getInsetJssStyle() should return correct JssStyle for parameter: undefined 1`] = `
{
  "bottom": 0,
  "left": 0,
  "right": 0,
  "top": 0,
}
`;

exports[`getTextHiddenJssStyle() should return correct JssStyle for isHidden: false 1`] = `
{
  "clip": "auto",
  "clipPath": "none",
  "height": "auto",
  "margin": 0,
  "overflow": "visible",
  "position": "static",
  "whiteSpace": "normal",
  "width": "auto",
}
`;

exports[`getTextHiddenJssStyle() should return correct JssStyle for isHidden: true 1`] = `
{
  "border": "0",
  "clip": "rect(1px,1px,1px,1px)",
  "clipPath": "inset(50%)",
  "height": "1px",
  "margin": "-1px",
  "overflow": "hidden",
  "position": "absolute",
  "whiteSpace": "nowrap",
  "width": "1px",
}
`;
